# craftinginterpreters

./: .gitignore
clox/: CMakeLists.txt  chunk.c  chunk.h  common.h  compiler.c  debug.c  main.c  memory.c  memory.h  object.c  object.h  scanner.c  scanner.h  table.c  table.h  value.c  value.h  vm.c  vm.h
jlox/src/com/craftinginterpreters/lox/: Interpreter.java  LoxClass.java  LoxInstance.java  Resolver.java  Stmt.java  TokenType.java
src/com/craftinginterpreters/lox/: AstPrinter.java  Environment.java  Expr.java  Interpreter.java  Lox.java  LoxCallable.java  LoxClass.java  LoxFunction.java  LoxInstance.java  Parser.java  Resolver.java  Scanner.java  Stmt.java
src/com/craftinginterpreters/tool/: Expr.java  GenerateAst.java
